--- a/13.html
+++ b/13.html
@@ -24,7 +24,7 @@
         <h2 class="article" style="font-size: 2.5em">
           Giant Dogs Threaten to Trample the USA
         </h2>
-        <video src="" class="videosize13"></video>
+        <video src="dogstrample.mp4" class="videosize13"></video>
       </div>
     </center>
   </body>
