--- a/index.html
+++ b/index.html
@@ -75,6 +75,26 @@
         <a href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a>
       </h4>
     </div>
+    <div class="article3">
+      <h2 class="article">You Can't Fart in Public in Florida</h2>
+      <img src="jail.jpeg" alt="jail">
+      <p class="text">Image from Unsplash (Saad Chaudry)</p>
+      <h4 class="text">You can't fart in public in Florida. After a child farted<br>
+        in front of David Samson, the whole of Florida was in shock.<br>
+        The fart smelled so bad that David couldn't breathe<br> and
+        had to get away from the child. After some searching,<br>
+        government officials found the child who did this crime.<br>
+        Ever since then, farting has been banned in public in Florida.<br>
+        If you fart in public, you could be sentenced to community<br>
+        service for a month or even be arrested if the fart induces<br>
+        agony. Thousands of people don't know about this rule<br>
+        in Florida and are in danger. If things go wrong and they fart,<br>
+        it could be over. Almost 7000 people have gotten arrested for<br> the non-violent crime. The president of Russia even stated<br> that he would go to Florida and fart everywhere. Citizens were in shock<br> when he said that so they went to Russia and farted in his face. This made<br> him so angry that he banned farting in Russia.</h4>
+        <h4 class="text">
+          This article was written by
+          <a href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a>
+        </h4>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
