--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
       <h1><a href="13.html" class="thirteen">13 O-Clock</a></h1>
     </div>
     <div class="article1">
-      <h2 class="article">Ukrussiarussia: The Worst of the Worst</h2>
-      <img src="factory.jpeg" alt="factory" />
+      <h2 class="article">Ukrussiarussia: A Faction</h2>
+      <img src="ukrussia.PNG" alt="ukrussia" />
       <p class="text">Image from Wikemedia Commons</p>
       <h4 class="text">
         A small conservative faction found in the suburbs of eastern
         <br />Ukraine had dubbed themselves, “Ukrussia.” Although<br />
         this newly formed faction has been disregarded by both<br />
-        Nato and the USA respectively,, Ukrussia has now allied with Russia,<br />
+        Nato and the USA respectively, Ukrussia has now allied with Russia,<br />
         forming a newly formed faction, dubbed, “Ukrussiarussia.”<br />
         This divergent faction has faced fire on Social Media, from<br />
         platforms like Twitter, Snapchat, and most famously, TikTok.<br />
@@ -94,6 +94,11 @@
           This article was written by
           <a href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a>
         </h4>
+    </div>
+    <div class="video1">
+      <h2 class="article">A Man Lost His Phone Down the Toilet,<br> Lived to Regret It</h2>
+      <video src="NEWS.mp4" width="400" height="200" autoplay muted controls></video>
+      <h4 class="text">Video by Aditi Bhuman</h4>
     </div>
     <script src="script.js"></script>
   </body>
