--- a/index.html
+++ b/index.html
@@ -96,9 +96,14 @@
         </h4>
     </div>
     <div class="video1">
-      <h2 class="article">A Man Lost His Phone Down the Toilet,<br> Lived to Regret It</h2>
+      <h2 class="article">A Man Loses His Phone Down the Toilet,<br> Lived to Regret It</h2>
       <video src="NEWS.mp4" width="400" height="200" autoplay muted controls></video>
-      <h4 class="text">Video by Aditi Bhuman</h4>
+      <h4 class="text">Video by <a href="mailto:245847@students.srvusd.net">Aditi Bhuman</a></h4>
+    </div>
+    <div class="video2">
+      <h2 class="article">Russia Invades Ukraine: Live From SMNews</h2>
+      <video src="russiainvadesukraine.mp4" autoplay muted controls width="400" height="200"></video>
+      <h4 class="text">Video By <a href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a></h4>
     </div>
     <script src="script.js"></script>
   </body>
