--- a/13.html
+++ b/13.html
@@ -24,8 +24,16 @@
         <h2 class="article" style="font-size: 2.5em">
           Giant Dogs Threaten to Trample the USA
         </h2>
-        <video src="dogstrample.mp4" class="videosize13" autoplay muted controls></video>
-        <h2 class="article">Hosted by <a href="mailto:233623@students.srvusd.net">Aarav Tandon</a></h2>
+        <video
+          src="dogstrample.mp4"
+          class="videosize13"
+          autoplay
+          muted
+          controls
+        ></video>
+        <h2 class="article">
+          Hosted by <a href="mailto:233623@students.srvusd.net">Aarav Tandon</a>
+        </h2>
       </div>
     </center>
   </body>
