--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     />
   </head>
   <body>
+    <div class="menubar">
+    </div>
     <div class="topmenu">
       <h1><a href="index.html" class="smnews" id="smnews">SMNews</a></h1>
       <h1><a href="index.html" class="home">Home</a></h1>
