--- a/index.html
+++ b/index.html
@@ -77,28 +77,15 @@
       </h4>
     </div>
     <div class="article3">
-      <h2 class="article">You Can't Fart in Public in Florida</h2>
-      <img src="jail.jpeg" alt="jail" />
-      <p class="text">Image from Unsplash (Saad Chaudry)</p>
+      <h2 class="article">Ukrainians Continue to Battle For Kyiv</h2>
+      <img src="Ukrainevsrussia.webp" alt="Ukraine fights against Russia" />
+      <p class="text">Image from The Guardian</p>
       <h4 class="text">
-        You can't fart in public in Florida. After a child farted<br />
-        in front of David Samson, the whole of Florida was in shock.<br />
-        The fart smelled so bad that David couldn't breathe<br />
-        and had to get away from the child. After some searching,<br />
-        government officials found the child who did this crime.<br />
-        Ever since then, farting has been banned in public in Florida.<br />
-        If you fart in public, you could be sentenced to community<br />
-        service for a month or even be arrested if the fart induces<br />
-        agony. Thousands of people don't know about this rule<br />
-        in Florida and are in danger. If things go wrong and they fart,<br />
-        it could be over. Almost 7000 people have gotten arrested for<br />
-        the non-violent crime. The president of Russia even stated<br />
-        that he would go to Florida and fart everywhere. Citizens were in
-        shock<br />
-        when he said that so they went to Russia and farted in his face. This
-        made<br />
-        him so angry that he banned farting in Russia.
+        Russian military forced their way into Kyiv, attacking by land and air.<br> Ukrainian soldiers came in to defend their capital. Volodymyr Zelenskyy<br> vowed he would not surrender until every Russian soldier was gone. Vladimir<br> Putin even called him a terrorist. On Friday, Mr. Zelenskyy posted a video<br> from Kyiv stating that "We are all here, defending our independence."<br> Ukrainian troops blew up bridges leading to Kyiv to slow the progress of<br> Russian tanks that were moving towards the city.<br>
       </h4>
+      <img src="russiantank.jpeg" alt="russian tank">
+      <p class="text">Image from INews</p>
+      <h4 class="text"> Ukrainian tanks and artillery were positioned to deflect a ground assault<br> that Russia was hinting at. Ukraine was able to withstand the first Russian<br> assault but was heavily impacted by the bombings. Ukrainian officials even sought<br> help from the U.S., and other Western countries, warning them of the<br> consequences that would ensue. In the White House, Jen Psaki warned<br> "Kyiv falling is a real possibility. Even as we see resistance on the ground, Russia's<br> military continues to advance toward Kyiv." Mr. Putin's attacks raised the risk that<br> violence could spread into other surrounding countries. If Moscow wins,<br> Russia could have the potential to place forces on the border of NATO. Oleksii<br> Reznikov stated that "Ukrainians are now fighting for the future they deserve.<br> For themselves and all of Europe." The Biden administration said that they<br> were thinking of offering support to the Ukrainian military, but defense<br> officials have not yet stated when this assistance would be delivered.</h4>
       <h4 class="text">
         This article was written by
         <a href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a>
@@ -121,7 +108,7 @@
         Video by <a href="mailto:245847@students.srvusd.net">Aditi Bhuman</a>
       </h4>
     </div>
-    <div class="video2">
+    <!--<div class="video2">
       <h2 class="article">Russia Invades Ukraine: Live From SMNews</h2>
       <video
         src="russiainvadesukraine.mp4"
@@ -135,6 +122,7 @@
         Video By <a href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a>
       </h4>
     </div>
+  -->
     <script src="script.js"></script>
   </body>
 </html>
