--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
       href="https://fonts.googleapis.com/css2?family=Chivo&family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
   </head>
   <body>
     </div>
@@ -47,6 +50,20 @@
       </h4>
     </div>
     <div class="article2">
+      <h2 class="article">
+        CDC Eases Covid Mask Guidelines
+      </h2>
+      <img src="cdcmask.jpeg" alt="person in mask" />
+      <p class="text">Image from ABC News</p>
+      <h4 class="text">
+        The CDC has started to ease the covid mask guidelines after a steep drop<br> in cases and mitigation efforts nationwide. The Center for Disease Control<br> and Prevention started to assess each county by its covid severity level.<br> The three factors on assessing will be new Covid-19 cases per 100,000<br> residents in the past seven days, new Covid-19 cases per 100,000 residents<br> in the past seven days, and new Covid-19 related hospital admissions. There<br> were three risk categories based on Covid-19 cases: high, medium, and low.<br> The new guidelines focus on minimizing severe disease and containing any<br> new cases. The CDC now recommends school masking only in counties where<br> Covid-19 levels are high. They did this because most children are at a relatively<br> lower risk of severe disease and are mostly asymptomatic. CDC stated that<br> "We need to be able to relax our layered prevention measure when things<br> are looking up and, we need to be able to dial them again... should we have<br> a new variant or surge."
+      </h4>
+      <h4 class="text">
+        This article was written by
+        <a href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a>
+      </h4>
+    </div>
+    <div class="article4">
       <h2 class="article">
         Apple is Closing Down After Lawsuit<br />
         With Microsoft
