--- a/index.html
+++ b/index.html
@@ -63,6 +63,18 @@
         <a href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a>
       </h4>
     </div>
+    <div class="article6">
+      <h2 class="article">Vladimir Putin Announces Deployment<br> of a New Generation of Aircraft and<br> Armored Vehicles. </h2>
+      <img src="Screen Shot 2022-02-28 at 4.21.26 PM.png" alt="tank">
+      <p class="text">Image from Wikipedia</p>
+      <h4 class="text">
+        As the Russian military forces face fierce resistance from<br> the Ukrainian army and paramilitary groups, Putin decides<br> to consider deploying their new “Sukhoi SU-57” as a way<br> to demoralize the Ukranians by shooting down the “Ghost<br> of Kyiv”. “Our T-90 tanks are not effective against the<br> Ukrainian resistance”. Says Russian army general Valery<br> Vasilyevich Gerasimov. As of Monday, 15 of Russia’s new<br>T-14 armata tanks are deployed in Belarus. The Moscow<br> Kremlin argues that deploying newer vehicles will be too<br> costly and a waste of manpower. But Putin declares that<br> in order to take Kyiv, they will need vehicles that are able<br> to withstand guerilla warfare tactics. 
+      </h4>
+      <h4 class="text">
+        This article was written by
+        <a href="mailto:216027@students.srvusd.net">Konnor Ly</a>
+      </h4>
+    </div>
     <div class="article4">
       <h2 class="article">
         Apple is Closing Down After Lawsuit<br />
@@ -108,7 +120,23 @@
         <a href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a>
       </h4>
     </div>
-    <div class="video1">
+    <div class="article5">
+      <h2 class="article">
+        Death Valley Will be Underwater in Three Years
+      </h2>
+      <img src="desert1.png" alt="desert underwater" />
+      <p class="text">Image from Brittanica</p>
+      <h4 class="text">
+        Scientists expect that Death valley will be underwater in 3 years. According to CNN’s best reporter “due to climate change and a bunch of other factors, California’s Death Valley<br> will be an aquarium by 2025. It is also more than 280 feet below sea level which is<br> the lowest point in North America. Therefore, when sea levels start rising scientists<br> believe it will be one of the first places in the world to go underwater.” Authorities<br> are urging people who live near the area to start moving to different locations as<br> soon as possible. President Joe Biden has already acknowledged this as a national<br> crisis and is telling people to stop farting in order to slow down climate change<br> which is the reason this is happening in the first place.
+
+      </h4>
+      <h4 class="text">
+        This article was written by
+        <a href="mailto:219915@students.srvusd.net">Nathan Chow</a>
+      </h4>
+    </div>
+    
+    <!--<div class="video1">
       <h2 class="article">
         A Man Loses His Phone Down the Toilet,<br />
         Lived to Regret It
@@ -125,7 +153,7 @@
         Video by <a href="mailto:245847@students.srvusd.net">Aditi Bhuman</a>
       </h4>
     </div>
-    <!--<div class="video2">
+    <div class="video2">
       <h2 class="article">Russia Invades Ukraine: Live From SMNews</h2>
       <video
         src="russiainvadesukraine.mp4"
