--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <a href="mailto:216549@students.srvusd.net">Asher Lee</a>
       </h4>
     </div>
+    
     <div class="article2">
       <h2 class="article">
         CDC Eases Covid Mask Guidelines
@@ -60,8 +61,23 @@
       </h4>
       <h4 class="text">
         This article was written by
-        <a href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a>
+        <a style="margin: 0px;"href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a>
       </h4>
+    </div>
+    <div class="article3">
+      <h2 class="article">Ukrainians Continue to Battle For Kyiv</h2>
+      <img src="Ukrainevsrussia.webp" alt="Ukraine fights against Russia" />
+      <p class="text">Image from The Guardian</p>
+      <h4 class="text">
+        Russian military forced their way into Kyiv, attacking by land and air.<br> Ukrainian soldiers came in to defend their capital. Volodymyr Zelenskyy<br> vowed he would not surrender until every Russian soldier was gone. <br>Vladimir Putin even called him a terrorist. On Friday, Mr. Zelenskyy<br> posted a video from Kyiv stating that "We are all here, defending our<br> independence." Ukrainian troops blew up bridges leading to Kyiv to<br> slow the progress of Russian tanks that were moving towards the city.<br>
+      </h4>
+      <img src="russiantank.jpeg" alt="russian tank">
+      <p class="text">Image from INews</p>
+      <h4 class="text"> Ukrainian tanks and artillery were positioned to deflect a ground assault<br> that Russia was hinting at. Ukraine was able to withstand the first Russian<br> assault but was heavily impacted by the bombings. Ukrainian officials even sought<br> help from the U.S., and other Western countries, warning them of the<br> consequences that would ensue. In the White House, Jen Psaki warned<br> "Kyiv falling is a real possibility. Even as we see resistance on the ground, Russia's<br> military continues to advance toward Kyiv." Mr. Putin's attacks raised the risk that<br> violence could spread into other surrounding countries. If Moscow wins,<br> Russia could have the potential to place forces on the border of NATO. Oleksii<br> Reznikov stated that "Ukrainians are now fighting for the future they deserve.<br> For themselves and all of Europe." The Biden administration said that they<br> were thinking of offering support to the Ukrainian military, but defense<br> officials have not yet stated when this assistance would be delivered.</h4>
+      <h4 class="text">
+        This article was written by
+        <a href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a>
+      </h4> 
     </div>
     <div class="article6">
       <h2 class="article">Vladimir Putin Announces Deployment<br> of a New Generation of Aircraft and<br> Armored Vehicles. </h2>
@@ -105,37 +121,59 @@
         <a href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a>
       </h4>
     </div>
-    <div class="article3">
-      <h2 class="article">Ukrainians Continue to Battle For Kyiv</h2>
-      <img src="Ukrainevsrussia.webp" alt="Ukraine fights against Russia" />
-      <p class="text">Image from The Guardian</p>
-      <h4 class="text">
-        Russian military forced their way into Kyiv, attacking by land and air.<br> Ukrainian soldiers came in to defend their capital. Volodymyr Zelenskyy<br> vowed he would not surrender until every Russian soldier was gone. Vladimir<br> Putin even called him a terrorist. On Friday, Mr. Zelenskyy posted a video<br> from Kyiv stating that "We are all here, defending our independence."<br> Ukrainian troops blew up bridges leading to Kyiv to slow the progress of<br> Russian tanks that were moving towards the city.<br>
-      </h4>
-      <img src="russiantank.jpeg" alt="russian tank">
-      <p class="text">Image from INews</p>
-      <h4 class="text"> Ukrainian tanks and artillery were positioned to deflect a ground assault<br> that Russia was hinting at. Ukraine was able to withstand the first Russian<br> assault but was heavily impacted by the bombings. Ukrainian officials even sought<br> help from the U.S., and other Western countries, warning them of the<br> consequences that would ensue. In the White House, Jen Psaki warned<br> "Kyiv falling is a real possibility. Even as we see resistance on the ground, Russia's<br> military continues to advance toward Kyiv." Mr. Putin's attacks raised the risk that<br> violence could spread into other surrounding countries. If Moscow wins,<br> Russia could have the potential to place forces on the border of NATO. Oleksii<br> Reznikov stated that "Ukrainians are now fighting for the future they deserve.<br> For themselves and all of Europe." The Biden administration said that they<br> were thinking of offering support to the Ukrainian military, but defense<br> officials have not yet stated when this assistance would be delivered.</h4>
-      <h4 class="text">
-        This article was written by
-        <a href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a>
-      </h4>
-    </div>
-    <div class="article5">
-      <h2 class="article">
-        Death Valley Will be Underwater in Three Years
-      </h2>
-      <img src="desert1.png" alt="desert underwater" />
-      <p class="text">Image from Brittanica</p>
-      <h4 class="text">
-        Scientists expect that Death valley will be underwater in 3 years. According to CNN’s best reporter “due to climate change and a bunch of other factors, California’s Death Valley<br> will be an aquarium by 2025. It is also more than 280 feet below sea level which is<br> the lowest point in North America. Therefore, when sea levels start rising scientists<br> believe it will be one of the first places in the world to go underwater.” Authorities<br> are urging people who live near the area to start moving to different locations as<br> soon as possible. President Joe Biden has already acknowledged this as a national<br> crisis and is telling people to stop farting in order to slow down climate change<br> which is the reason this is happening in the first place.
-
-      </h4>
-      <h4 class="text">
-        This article was written by
-        <a href="mailto:219915@students.srvusd.net">Nathan Chow</a>
-      </h4>
-    </div>
-    
+    <footer class="footer" style="text-align: center;">
+      <?xml version="1.0" encoding="iso-8859-1"?>
+<!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+<svg class="youtube"version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 461.001 461.001" style="enable-background:new 0 0 461.001 461.001;" xml:space="preserve">
+<a href="https://www.youtube.com/channel/UC5JQvQE5MLqnSj_ckfpqImg">
+   <g>
+	<path style="fill:#F61C0D;" d="M365.257,67.393H95.744C42.866,67.393,0,110.259,0,163.137v134.728
+		c0,52.878,42.866,95.744,95.744,95.744h269.513c52.878,0,95.744-42.866,95.744-95.744V163.137
+		C461.001,110.259,418.135,67.393,365.257,67.393z M300.506,237.056l-126.06,60.123c-3.359,1.602-7.239-0.847-7.239-4.568V168.607
+		c0-3.774,3.982-6.22,7.348-4.514l126.06,63.881C304.363,229.873,304.298,235.248,300.506,237.056z"/>
+</g>
+</a>
+</svg>
+<?xml version="1.0" encoding="iso-8859-1"?>
+<!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+<svg class="instagram"version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 551.034 551.034" style="enable-background:new 0 0 551.034 551.034;" xml:space="preserve">
+<g id="XMLID_13_">
+	
+		<linearGradient id="XMLID_2_" gradientUnits="userSpaceOnUse" x1="275.517" y1="4.5714" x2="275.517" y2="549.7202" gradientTransform="matrix(1 0 0 -1 0 554)">
+		<stop  offset="0" style="stop-color:#E09B3D"/>
+		<stop  offset="0.3" style="stop-color:#C74C4D"/>
+		<stop  offset="0.6" style="stop-color:#C21975"/>
+		<stop  offset="1" style="stop-color:#7024C4"/>
+	</linearGradient>
+	<path id="XMLID_17_" style="fill:url(#XMLID_2_);" d="M386.878,0H164.156C73.64,0,0,73.64,0,164.156v222.722
+		c0,90.516,73.64,164.156,164.156,164.156h222.722c90.516,0,164.156-73.64,164.156-164.156V164.156
+		C551.033,73.64,477.393,0,386.878,0z M495.6,386.878c0,60.045-48.677,108.722-108.722,108.722H164.156
+		c-60.045,0-108.722-48.677-108.722-108.722V164.156c0-60.046,48.677-108.722,108.722-108.722h222.722
+		c60.045,0,108.722,48.676,108.722,108.722L495.6,386.878L495.6,386.878z"/>
+	
+		<linearGradient id="XMLID_3_" gradientUnits="userSpaceOnUse" x1="275.517" y1="4.5714" x2="275.517" y2="549.7202" gradientTransform="matrix(1 0 0 -1 0 554)">
+		<stop  offset="0" style="stop-color:#E09B3D"/>
+		<stop  offset="0.3" style="stop-color:#C74C4D"/>
+		<stop  offset="0.6" style="stop-color:#C21975"/>
+		<stop  offset="1" style="stop-color:#7024C4"/>
+	</linearGradient>
+	<path id="XMLID_81_" style="fill:url(#XMLID_3_);" d="M275.517,133C196.933,133,133,196.933,133,275.516
+		s63.933,142.517,142.517,142.517S418.034,354.1,418.034,275.516S354.101,133,275.517,133z M275.517,362.6
+		c-48.095,0-87.083-38.988-87.083-87.083s38.989-87.083,87.083-87.083c48.095,0,87.083,38.988,87.083,87.083
+		C362.6,323.611,323.611,362.6,275.517,362.6z"/>
+	
+		<linearGradient id="XMLID_4_" gradientUnits="userSpaceOnUse" x1="418.306" y1="4.5714" x2="418.306" y2="549.7202" gradientTransform="matrix(1 0 0 -1 0 554)">
+		<stop  offset="0" style="stop-color:#E09B3D"/>
+		<stop  offset="0.3" style="stop-color:#C74C4D"/>
+		<stop  offset="0.6" style="stop-color:#C21975"/>
+		<stop  offset="1" style="stop-color:#7024C4"/>
+	</linearGradient>
+	<circle id="XMLID_83_" style="fill:url(#XMLID_4_);" cx="418.306" cy="134.072" r="34.149"/>
+</g>
+</svg>
+    </footer>
     <!--<div class="video1">
       <h2 class="article">
         A Man Loses His Phone Down the Toilet,<br />
