--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 <svg class="instagram"version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 551.034 551.034" style="enable-background:new 0 0 551.034 551.034;" xml:space="preserve">
 <g id="XMLID_13_">
-	
+	<a href="https://www.instagram.com/officialsmnews/">
 		<linearGradient id="XMLID_2_" gradientUnits="userSpaceOnUse" x1="275.517" y1="4.5714" x2="275.517" y2="549.7202" gradientTransform="matrix(1 0 0 -1 0 554)">
 		<stop  offset="0" style="stop-color:#E09B3D"/>
 		<stop  offset="0.3" style="stop-color:#C74C4D"/>
@@ -173,6 +173,7 @@
 	<circle id="XMLID_83_" style="fill:url(#XMLID_4_);" cx="418.306" cy="134.072" r="34.149"/>
 </g>
 </svg>
+</a>
     </footer>
     <!--<div class="video1">
       <h2 class="article">
