--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
         <a href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a>
       </h4>
     </div>
+    <div class="article7">
+      <h2 class="article">Emmanuel Macron declares himself “New Napoleon”</h2>
+      <img src="emmanuel macron.webp" alt="emmanuel macron">
+      <p class="text">Image from NDTV</p>
+      <h4 class="text">On the morning of Wednesday, French paratroopers<br> were seen to be deployed on the border of the Franco<br>-German border. The Bundeswehr security council<br> suspected it was an area to construct a military base,<br> but it was not what they suspected. At 9:38 AM in<br> Germany, French soldiers started unexpectedly firing<br> at their allies. German forces tried to retaliate but were<br> forced to retreat away from the border. The incident<br>  was reported by a few civilian witnesses, one of them<br> being a part of the EU council. At 11:38 French forces<br> had made their way into the German city of Stuttgart,<br> The french military also considered rapid deployment<br> of armor and aircraft in Germany. After the supposed<br> “annexing” had happened a UN peace talk was held<br> in London, which Macron attended. At the peace<br> talk many representatives have placed sanctions<br> and airspace bans for France. Macron replied with<br> “I am the new emperor, Viva l’emperur” Shortly after<br> the peace talk was done, Macron made a public announcement<br> to France and stated “Arise sons of France, Your<br> empire needs you”. The French Military had also positioned<br> 4 Navy vessels along the coast of northern Spain.</h4>
+    </div>
     <footer class="footer" style="text-align: center;">
       <?xml version="1.0" encoding="iso-8859-1"?>
 <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
