--- a/index.html
+++ b/index.html
@@ -23,6 +23,28 @@
       <h1><a href="index.html" class="home">Home</a></h1>
       <h1><a href="13.html" class="thirteen">13 O-Clock</a></h1>
     </div>
+    <div class="article8">
+      <h2 class="article">Student Takes Massive Dump in Boys Bathroom</h2>
+      <img src="dirty toilet.jpeg" alt="dirty toilet. youre lucky you dont have to see it.">
+      <p class="text">Image from Adobe Stock</p>
+      <h4 class="text">Earlier today a student accused the school lunch ladies<br> of spiking beans with prune juice after having explosive<br> diarrhea in the boys bathroom. She lives to regret it. A<br> student was just having a normal day until he had lunch.<br> Students at Rock Middle School are provided with a<br> complimentary lunch every Wednesday. After lunch,<br> during the fifth period, he felt his tummy rumble like an<br> earthquake. He rushed to the bathroom immediately<br> and jumped onto the toilet. He felt the poop slowly<br> slither down the toilet and plop in the water with a<br> splash. The poop was so smelly and gross that it blew<br> up and destroyed the entire toilet. He is lucky to be<br> alive after smelling his own poo. Custodians are<br> threatening to quit because of this preposterous<br> event, schools are increasing paychecks to all<br> workers at school to keep them at school. School<br> is now broke. A top military official named Elijah<br> is looking into turning this fragrance into a<br>poisonous long range missile against Russia.<br> Russia has left Ukraine and is begging for mercy.<br> They learned their lesson and live to regret it.
+      </h4>
+      <h4 class="text">
+        This article was written by
+        <a href="mailto:216027@students.srvusd.net">Arjun Mehrotra</a>
+        ,
+        </h4>
+    </div>
+    </div>
+    <div class="article7">
+      <h2 class="article">Emmanuel Macron declares himself “New Napoleon”</h2>
+      <img src="emmanuel macron.webp" alt="emmanuel macron">
+      <p class="text">Image from NDTV</p>
+      <h4 class="text">On the morning of Wednesday, French paratroopers<br> were seen to be deployed on the border of the Franco<br>-German border. The Bundeswehr security council<br> suspected it was an area to construct a military base,<br> but it was not what they suspected. At 9:38 AM in<br> Germany, French soldiers started unexpectedly firing<br> at their allies. German forces tried to retaliate but were<br> forced to retreat away from the border. The incident<br>  was reported by a few civilian witnesses, one of them<br> being a part of the EU council. At 11:38 French forces<br> had made their way into the German city of Stuttgart,<br> The french military also considered rapid deployment<br> of armor and aircraft in Germany. After the supposed<br> “annexing” had happened a UN peace talk was held<br> in London, which Macron attended. At the peace<br> talk many representatives have placed sanctions<br> and airspace bans for France. Macron replied with<br> “I am the new emperor, Viva l’emperur” Shortly after<br> the peace talk was done, Macron made a public announcement<br> to France and stated “Arise sons of France, Your<br> empire needs you”. The French Military had also positioned<br> 4 Navy vessels along the coast of northern Spain.</h4>
+      <h4 class="text">
+        This article was written by
+        <a href="mailto:216027@students.srvusd.net">Konnor Ly</a>
+    </div>
     <div class="article1">
       <h2 class="article">Ukrussiarussia: A Faction</h2>
       <img src="ukrussia.PNG" alt="ukrussia" />
@@ -64,7 +86,7 @@
         <a style="margin: 0px;"href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a>
       </h4>
     </div>
-    <div class="article3">
+    <!--<div class="article3">
       <h2 class="article">Ukrainians Continue to Battle For Kyiv</h2>
       <img src="Ukrainevsrussia.webp" alt="Ukraine fights against Russia" />
       <p class="text">Image from The Guardian</p>
@@ -79,6 +101,7 @@
         <a href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a>
       </h4> 
     </div>
+  -->
     <div class="article6">
       <h2 class="article">Vladimir Putin Announces Deployment<br> of a New Generation of Aircraft and<br> Armored Vehicles. </h2>
       <img src="Screen Shot 2022-02-28 at 4.21.26 PM.png" alt="tank">
@@ -121,12 +144,7 @@
         <a href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a>
       </h4>
     </div>
-    <div class="article7">
-      <h2 class="article">Emmanuel Macron declares himself “New Napoleon”</h2>
-      <img src="emmanuel macron.webp" alt="emmanuel macron">
-      <p class="text">Image from NDTV</p>
-      <h4 class="text">On the morning of Wednesday, French paratroopers<br> were seen to be deployed on the border of the Franco<br>-German border. The Bundeswehr security council<br> suspected it was an area to construct a military base,<br> but it was not what they suspected. At 9:38 AM in<br> Germany, French soldiers started unexpectedly firing<br> at their allies. German forces tried to retaliate but were<br> forced to retreat away from the border. The incident<br>  was reported by a few civilian witnesses, one of them<br> being a part of the EU council. At 11:38 French forces<br> had made their way into the German city of Stuttgart,<br> The french military also considered rapid deployment<br> of armor and aircraft in Germany. After the supposed<br> “annexing” had happened a UN peace talk was held<br> in London, which Macron attended. At the peace<br> talk many representatives have placed sanctions<br> and airspace bans for France. Macron replied with<br> “I am the new emperor, Viva l’emperur” Shortly after<br> the peace talk was done, Macron made a public announcement<br> to France and stated “Arise sons of France, Your<br> empire needs you”. The French Military had also positioned<br> 4 Navy vessels along the coast of northern Spain.</h4>
-    </div>
+    
     <footer class="footer" style="text-align: center;">
       <?xml version="1.0" encoding="iso-8859-1"?>
 <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
