--- a/index.html
+++ b/index.html
@@ -71,7 +71,20 @@
         <a href="mailto:216549@students.srvusd.net">Asher Lee</a>
       </h4>
     </div>
-    
+    <div class="article9">
+      <h2 class="article">
+        CER's Are Being Banned in<br> Pine Valley Middle School
+      </h2>
+      <img src="cerbanned.png" alt="Claim-Evidence-Response banned" />
+      <p class="text">Image from Arjun Mehrotra</p>
+      <h4 class="text">
+        Students in Pine Valley Middle School have been protesting<br> to: "Remove Claim-Evidence-Response" in their science<br> classes. After eight months of doing CER's, students are<br> getting tired. They think that it is a "disaster and may ruin<br> mankind," according to reporter Ira Banga. During the<br> school day, students would quietly make posters about<br> why CER's should be banned. Some even went crazy and<br> tore their science book in half after the class was assigned<br> 891 Claim-Evidence-Response's each. One kid even supposedly<br> "ate all his crayons and burped in everyone's face" during lunch<br> that day. Teachers have been getting very angry at the students<br> for protesting like this and have said that "anyone caught<br> protesting against CER's will be forced to dunk their head in<br> the toilet bowl full of poop for 24 hours."
+      </h4>
+      <h4 class="text">
+        This article was written by
+        <a style="margin: 0px;"href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a>
+      </h4>
+    </div>
     <div class="article2">
       <h2 class="article">
         CDC Eases Covid Mask Guidelines
