--- a/index.html
+++ b/index.html
@@ -31,8 +31,10 @@
       </h4>
       <h4 class="text">
         This article was written by
-        <a href="mailto:216027@students.srvusd.net">Arjun Mehrotra</a>
-        ,
+        <a href="mailto:216027@students.srvusd.net">Arjun Mehrotra</a>,
+        <br>
+         <a href="mailto:219871@students.srvusd.net">Julia Belmonte</a>
+        , and <a href="mailto:219915@students.srvusd.net">Nathan Chow</a>
         </h4>
     </div>
     </div>
