--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
   <body>
     </div>
     <div class="topmenu">
-      <h1><a href="index.html" class="smnews" id="smnews">SMNews</a></h1>
+      <a href="index.html"><img src="sm news logo.png" alt="smnewslogo" class="logo"></a>
+      <h1><a href="index.html" class="smnews" id="smnews" >SMNews</a></h1>
       <h1><a href="index.html" class="home">Home</a></h1>
       <h1><a href="13.html" class="thirteen">13 O-Clock</a></h1>
     </div>
@@ -27,7 +28,7 @@
       <h2 class="article">Student Takes Massive Dump in Boys Bathroom</h2>
       <img src="dirty toilet.jpeg" alt="dirty toilet. youre lucky you dont have to see it.">
       <p class="text">Image from Adobe Stock</p>
-      <h4 class="text">Earlier today a student accused the school lunch ladies<br> of spiking beans with prune juice after having explosive<br> diarrhea in the boys bathroom. She lives to regret it. A<br> student was just having a normal day until he had lunch.<br> Students at Rock Middle School are provided with a<br> complimentary lunch every Wednesday. After lunch,<br> during the fifth period, he felt his tummy rumble like an<br> earthquake. He rushed to the bathroom immediately<br> and jumped onto the toilet. He felt the poop slowly<br> slither down the toilet and plop in the water with a<br> splash. The poop was so smelly and gross that it blew<br> up and destroyed the entire toilet. He is lucky to be<br> alive after smelling his own poo. Custodians are<br> threatening to quit because of this preposterous<br> event, schools are increasing paychecks to all<br> workers at school to keep them at school. School<br> is now broke. A top military official named Elijah<br> is looking into turning this fragrance into a<br>poisonous long range missile against Russia.<br> Russia has left Ukraine and is begging for mercy.<br> They learned their lesson and live to regret it.
+      <h4 class="text">Earlier today a student accused the school lunch ladies<br> of spiking beans with prune juice after having explosive<br> diarrhea in the boys bathroom. She lives to regret it. A<br> student was just having a normal day until he had lunch.<br> Students at Rock Middle School are provided with a<br> complimentary lunch every Wednesday. After lunch,<br> during the fifth period, he felt his tummy rumble like an<br> earthquake. He rushed to the bathroom immediately<br> and jumped onto the toilet. He felt the poop slowly<br> slither down the toilet and plop in the water with a<br> splash. The poop was so smelly and gross that it blew<br> up and destroyed the entire toilet. He is lucky to be<br> alive after smelling his own poo. Custodians are<br> threatening to quit because of this preposterous<br> event, schools are increasing paychecks to all<br> workers at school to keep them at school. School<br> is now broke. A top military official named Grape<br> is looking into turning this fragrance into a<br>poisonous long range missile against Russia.<br> Russia has left Ukraine and is begging for mercy.<br> They learned their lesson and live to regret it.
       </h4>
       <h4 class="text">
         This article was written by
@@ -37,6 +38,21 @@
         , and <a href="mailto:219915@students.srvusd.net">Nathan Chow</a>
         </h4>
     </div>
+    </div>
+    <div class="article10">
+      <h2 class="article">Is Pluto Going to Crash Into Earth?
+      </h2>
+      <img src="pluto.jpeg" alt="pluto">
+      <p class="text">Image from Wikipedia</p>
+      <h4 class="text">Pluto has recently been sighted, arriving closer and closer<br> to Earth. Scientists expect pluto to crash into earth<br> approximately in the next 8 months. Our measurements<br> with advanced technology and neuroscience conclude<br> that Pluto will be falling in, or near the ocean. The people<br> are begging Elon Musk to create rockets to let everyone<br> live in space safely because the ocean will explode all of<br> its water to the land in the second planet collision in 2022.<br> 2021 ended tragically with Jupiter and Uranus slamming<br> into each other, starting a meteor shower over our planet.<br> Be careful when you are sitting outside because you may<br> see and explosion. If you do, contact 911 immediatly and<br> rush to your nearest watermelon because scientists have<br> proved that planets are scaraed of watermelon... I think.
+      </h4>
+      <h4 class="text">
+        This article was written by
+        <a href="mailto:216027@students.srvusd.net">Arjun Mehrotra</a>,
+        <br>
+         <a href="mailto:219871@students.srvusd.net">Julia Belmonte</a>
+        , and <a href="mailto:219915@students.srvusd.net">Nathan Chow</a>
+        </h4>
     </div>
     <div class="article7">
       <h2 class="article">Emmanuel Macron declares himself “New Napoleon”</h2>
