--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
         This article was written by
         <a href="mailto:216027@students.srvusd.net">Arjun Mehrotra</a>,
         <br>
-         <a href="mailto:219871@students.srvusd.net">Julia Belmonte</a>
-        , and <a href="mailto:219915@students.srvusd.net">Nathan Chow</a>
+         <a href="mailto:219871@students.srvusd.net">Julia Bellpepper</a>, and <a href="mailto:219915@students.srvusd.net">Nathan Chow</a>
         </h4>
     </div>
     </div>
@@ -44,13 +43,14 @@
       </h2>
       <p class="text">Image from Wikipedia</p>
       <img src="pluto.jpeg" alt="pluto">
-      <h4 class="text">Pluto has recently been sighted, arriving closer and closer<br> to Earth. Scientists expect pluto to crash into earth<br> approximately in the next 8 months. Our measurements<br> with advanced technology and neuroscience conclude<br> that Pluto will be falling in, or near the ocean. The people<br> are begging Elon Musk to create rockets to let everyone<br> live in space safely because the ocean will explode all of<br> its water to the land in the second planet collision in 2022.<br> 2021 ended tragically with Jupiter and Uranus slamming<br> into each other, starting a meteor shower over our planet.<br> Be careful when you are sitting outside because you may<br> see and explosion. If you do, contact 911 immediatly and<br> rush to your nearest watermelon because scientists have<br> proved that planets are scaraed of watermelon... I think.
+      <h4 class="text">Pluto has recently been sighted, arriving closer and closer<br> to Earth. Scientists expect pluto to crash into earth<br> approximately in the next 8 months. Our measurements<br> with advanced technology and neuroscience conclude<br> that Pluto will be falling in, or near the ocean. The people<br> are begging Elon Musk to create rockets to let everyone<br> live in space safely because the ocean will explode all of<br> its water to the land in the second planet collision in 2022.<br> 2021 ended tragically with Jupiter and Uranus slamming<br> into each other, starting a meteor shower over our planet.<br> Be careful when you are sitting outside because you may<br> see and explosion. If you do, contact 911 immediately and<br> rush to your nearest watermelon because scientists have<br> proved that planets are scaraed of watermelon... I think.
       </h4>
       <h4 class="text">
         This article was written by
         <a href="mailto:216027@students.srvusd.net">Arjun Mehrotra</a>,
         <br>
          <a href="mailto:219871@students.srvusd.net">Julia Belmonte</a>
+         , <a href="mailto:220544@students.srvusd.net">Isabella Cochran</a>
         , and <a href="mailto:219915@students.srvusd.net">Nathan Chow</a>
         </h4>
     </div>
