--- a/13.html
+++ b/13.html
@@ -15,7 +15,8 @@
   </head>
   <body>
     <div class="topmenu">
-      <h1><a href="index.html" class="smnews">SMNews</a></h1>
+      <a href="index.html"><img src="sm news logo.png" alt="smnewslogo" class="logo"></a>
+      <h1><a href="index.html" class="smnews" id="smnews" >SMNews</a></h1>
       <h1><a href="index.html" class="home">Home</a></h1>
       <h1><a href="13.html" class="thirteen">13 O-Clock</a></h1>
     </div>
@@ -31,6 +32,7 @@
           muted
           controls
         ></video>
+        <br>
         <h2 class="article">
           Hosted by <a href="mailto:233623@students.srvusd.net">Aarav Tandon</a>
         </h2>
