--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
 </g>
 </svg>
 </a>
+<h3>SMNews is for entertainment purposes only. Anything we say or do does not have to be true.</h3>
     </footer>
     <!--<div class="video1">
       <h2 class="article">
