--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <div class="article1">
       <h2 class="article">Ukrussiarussia: A Faction</h2>
       <p class="text">Image from Wikemedia Commons</p>
-      <img src="ukrussia.PNG" alt="ukrussia" />
+      <img src="ukrussiarussiaa.webp" alt="ukrussia" />
       <h4 class="text">
         A small conservative faction found in the suburbs of eastern
         <br />Ukraine had dubbed themselves, “Ukrussia.” Although<br />
