--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
   -->
     <div class="article6">
       <h2 class="article">Vladimir Putin Announces Deployment<br> of a New Generation of Aircraft and<br> Armored Vehicles. </h2>
-      <p class="text">Image from Wikipedia</p>
-      <img src="Screen Shot 2022-02-28 at 4.21.26 PM.png" alt="tank">
+      <p class="text">Image from Observador</p>
+      <img src="russiantank.jpeg" alt="tank">
       <h4 class="text">
         As the Russian military forces face fierce resistance from<br> the Ukrainian army and paramilitary groups, Putin decides<br> to consider deploying their new “Sukhoi SU-57” as a way<br> to demoralize the Ukranians by shooting down the “Ghost<br> of Kyiv”. “Our T-90 tanks are not effective against the<br> Ukrainian resistance”. Says Russian army general Valery<br> Vasilyevich Gerasimov. As of Monday, 15 of Russia’s new<br>T-14 armata tanks are deployed in Belarus. The Moscow<br> Kremlin argues that deploying newer vehicles will be too<br> costly and a waste of manpower. But Putin declares that<br> in order to take Kyiv, they will need vehicles that are able<br> to withstand guerilla warfare tactics. 
       </h4>
