--- a/index.html
+++ b/index.html
@@ -230,7 +230,8 @@
 </g>
 </svg>
 </a>
-<h3>SMNews is for entertainment purposes only. Anything we say or do does not have to be true.</h3>
+<h3 class="article">SMNews is for entertainment purposes only. Anything we say or do does not have to be true.</h3>
+<a href="copyright.html"><h3 class="article">Copyright</h3></a>
     </footer>
     <!--<div class="video1">
       <h2 class="article">
