--- a/index.html
+++ b/index.html
@@ -26,52 +26,49 @@
       <h1><a href="13.html" class="thirteen">13 O-Clock</a></h1>
     </div>
     <div class="article8">
-      <h2 class="article">Student Takes Massive Dump in Boys Bathroom</h2>
-      <p class="text">Image from Adobe Stock</p>
-      <img src="dirty toilet.jpeg" alt="dirty toilet. youre lucky you dont have to see it.">
-      <h4 class="text">Earlier today a student accused the school lunch ladies<br> of spiking beans with prune juice after having explosive<br> diarrhea in the boys bathroom. She lives to regret it. A<br> student was just having a normal day until he had lunch.<br> Students at Rock Middle School are provided with a<br> complimentary lunch every Wednesday. After lunch,<br> during the fifth period, he felt his tummy rumble like an<br> earthquake. He rushed to the bathroom immediately<br> and jumped onto the toilet. He felt the poop slowly<br> slither down the toilet and plop in the water with a<br> splash. The poop was so smelly and gross that it blew<br> up and destroyed the entire toilet. He is lucky to be<br> alive after smelling his own poo. Custodians are<br> threatening to quit because of this preposterous<br> event, schools are increasing paychecks to all<br> workers at school to keep them at school. School<br> is now broke. A top military official named Grape<br> is looking into turning this fragrance into a<br>poisonous long range missile against Russia.<br> Russia has left Ukraine and is begging for mercy.<br> They learned their lesson and live to regret it.
+      <h2 class="article">Ronald Mcdonald Retires and Joins Burger King</h2>
+      <p class="text">Image from <a href="https://www.mashed.com/202684/the-real-reason-mcdonalds-got-rid-of-ronald-mcdonald/">Mashed</a></p>
+      <img src="ronald mcdonald.jpeg" alt="ronald mcdonald: image from mashed">
+      <h4 class="text">
+        Ronald Mcdonald, the McDonalds mascot has finally retired<br> after 42 years of dressing up like a clown. He just recently<br> announced that he joined Burger King for a salary of $20<br> a year. Many people are surprised as to why he would leave<br> such a prestigous position at one of the most popular fast<br> food chains in history. Scientists believe it was because<br> "little kids would bully him for looking like an idiot" says<br> scientist from McDonalds University. A lot of people have<br> gone into depression after their famous mascot left. Johnson<br> Pooip said "I love Ronald and wish I could marry him." After<br> some further investigation, authorites have found out that<br> Ronald Mcdonald has changed his name to Donald BurgerKing.<br> If you have any more information as to why this happened,<br> please contact <a href="mailto:220603@students.srvusd.net"><u>Arjun Mehrotra</u></a>.
       </h4>
       <h4 class="text">
         This article was written by
-        <a href="mailto:216027@students.srvusd.net">Arjun Mehrotra</a>,
-        <br>
-         <a href="mailto:219871@students.srvusd.net">Julia Bellpepper</a>, and <a href="mailto:219915@students.srvusd.net">Nathan Chow</a>
-        </h4>
+        <a href="mailto:216027@students.srvusd.net">Arjun Mehrotra</a>
     </div>
     </div>
     <div class="article10">
-      <h2 class="article">Is Pluto Going to Crash Into Earth?
+      <h2 class="article">Chimpanzees Invade North Korea After<br> Man Said He "hates chimpanzees"
       </h2>
-      <p class="text">Image from Wikipedia</p>
-      <img src="pluto.jpeg" alt="pluto">
-      <h4 class="text">Pluto has recently been sighted, arriving closer and closer<br> to Earth. Scientists expect pluto to crash into earth<br> approximately in the next 8 months. Our measurements<br> with advanced technology and neuroscience conclude<br> that Pluto will be falling in, or near the ocean. The people<br> are begging Elon Musk to create rockets to let everyone<br> live in space safely because the ocean will explode all of<br> its water to the land in the second planet collision in 2022.<br> 2021 ended tragically with Jupiter and Uranus slamming<br> into each other, starting a meteor shower over our planet.<br> Be careful when you are sitting outside because you may<br> see and explosion. If you do, contact 911 immediately and<br> rush to your nearest watermelon because scientists have proved<br> that planets are scared of watermelon... I think.
+      <p class="text">Image from <a href="https://www.worldwildlife.org/species/chimpanzee">WorldWildLife</a></p>
+      <img src="chimpanzee.jpeg" alt="chimpanzee">
+      <h4 class="text">
+        Chimpanzees have crowded small villages in North Korea<br> after man said he "hates chimpanzees." The chimpanzees<br> heard about this horrible man and quickly tracked him down.<br> They traveled across the sea from Africa to make sure that<br> man would get what he deserves. And he did. The man was<br> bombarded with chimapnzees who jumped on him and bit him<br> on his ears. A reporter who was recording this said that<br> "the man's ears were gone lol." During this attack, chimpanzees<br> came across other people who were eating bananas. Those<br> people lived to regret it. You see, the chimpanzees saw the<br> bananas and instantly went crazy. They took all the bananas<br> and chomped them all down. That day, there was so much<br> banana poop that the entire nation had to wear N95 masks<br> to not throw up every 2 seconds.
       </h4>
       <h4 class="text">
         This article was written by
-        <a href="mailto:216027@students.srvusd.net">Arjun Mehrotra</a>,
-        <br>
-         <a href="mailto:219871@students.srvusd.net">Julia Belmonte</a>
-         , <a href="mailto:220544@students.srvusd.net">Isabella Cochran</a>
-        , and <a href="mailto:219915@students.srvusd.net">Nathan Chow</a>
+        <a href="mailto:216027@students.srvusd.net">Arjun Mehrotra</a>
         </h4>
     </div>
     <div class="article7">
-      <h2 class="article">Emmanuel Macron declares himself “New Napoleon”</h2>
-      <p class="text">Image from NDTV</p>
-      <img src="emmanuel macron.webp" alt="emmanuel macron">
-      <h4 class="text">On the morning of Wednesday, French paratroopers<br> were seen to be deployed on the border of the Franco<br>-German border. The Bundeswehr security council<br> suspected it was an area to construct a military base,<br> but it was not what they suspected. At 9:38 AM in<br> Germany, French soldiers started unexpectedly firing<br> at their allies. German forces tried to retaliate but were<br> forced to retreat away from the border. The incident<br>  was reported by a few civilian witnesses, one of them<br> being a part of the EU council. At 11:38 French forces<br> had made their way into the German city of Stuttgart,<br> The french military also considered rapid deployment<br> of armor and aircraft in Germany. After the supposed<br> “annexing” had happened a UN peace talk was held<br> in London, which Macron attended. At the peace<br> talk many representatives have placed sanctions<br> and airspace bans for France. Macron replied with<br> “I am the new emperor, Viva l’emperur” Shortly after<br> the peace talk was done, Macron made a public announcement<br> to France and stated “Arise sons of France, Your<br> empire needs you”. The French Military had also positioned<br> 4 Navy vessels along the coast of northern Spain.</h4>
+      <h2 class="article">Gaming Mouses have been banned<br> for being "too colorful"</h2>
+      <p class="text">Image from <a href="https://www.thermaltake.com/level-20-rgb-gaming-mouse.html">ThermalTake</a></p>
+      <img src="rgb gaming mouse.jpeg" alt="rgb gaming mouse from thermaltake">
+      <h4 class="text">
+        Gaming mouses have been banned in the USA after kid<br> flashes the rgb light into president Doe Jiden's face. Doe<br> Jiden was so mad that he kicked the child in his face and<br> broke his "stupid gaming mouse." The parents of the kid<br> sued Doe Jiden for fraud, manslaughter, physical abuse,<br> first degree murder, and robbing a bank. The kid started<br> crying when his $5000 gaming mouse he bought off Wish.com<br> broke. He begged his parents to get him a new one but they<br> would not budge. Some reporters recorded the footage of<br> Doe Jiden being violent and sent it to everyone in the mail<br> for some reason. Doe Jiden has been replaced with Tonald<br> Drump, a former president and government worker. Scientists<br> have said that the rgb light in gaming mouses is so powerful<br> that if you compare it to the sun, it would win. This is a huge<br> problem for major companies because now they have to<br> remove the rgb factor of their mouses, which was the only<br> reason people would buy it.
+      </h4>
       <h4 class="text">
         This article was written by
-        <a href="mailto:216027@students.srvusd.net">Konnor Ly</a>
+        <a href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a>
     </div>
     <div class="article9">
       <h2 class="article">
-        CER's Are Being Banned in<br> Pine Valley Middle School
+        Students at PVMS are Saying That<br> "SMNews is the best thing that ever happened us"
       </h2>
-      <p class="text">Image from Arjun Mehrotra</p>
-      <img src="cerbanned.png" alt="Claim-Evidence-Response banned" />
+      <p class="text">Image from <a href="index.html">SMNews</a></p>
+      <img src="sm news logo.png" alt="Claim-Evidence-Response banned" />
       <h4 class="text">
-        Students in Pine Valley Middle School have been protesting<br> to: "Remove Claim-Evidence-Response" in their science<br> classes. After eight months of doing CER's, students are<br> getting tired. They think that it is a "disaster and may ruin<br> mankind," according to reporter Ira Banga. During the<br> school day, students would quietly make posters about<br> why CER's should be banned. Some even went crazy and<br> tore their science book in half after the class was assigned<br> 891 Claim-Evidence-Response's each. One kid even supposedly<br> "ate all his crayons and burped in everyone's face" during lunch<br> that day. Teachers have been getting very angry at the students<br> for protesting like this and have said that "anyone caught<br> protesting against CER's will be forced to dunk their head in<br> the toilet bowl full of poop for 24 hours."
+        A student at Pine Valley says he "loves smnews." SMNews<br> has grown very popular over the last few weeks and is a<br>surprise to some people that such an honest company can<br> grow so large. Arjun Mehrotra, CEO of SMNews, is very<br> proud of the SMNews team and said that "I hope we can<br> continue doing this for the rest of the school year, maybe<br> even turn into an actual company." So many people have<br> helped SMNews grow, especially the advertising and article<br> team. "Without the advertisers we would never be here today."<br> says CEO Arjun Mehrotra. Our competitors "The New York<br> Times" and "The Wall Street Journal" stocks have crashed 180%<br> ever since February 14, 2022, the day SMNews was founded.
       </h4>
       <h4 class="text">
         This article was written by
