--- a/index.html
+++ b/index.html
@@ -37,7 +37,19 @@
         <a href="mailto:216027@students.srvusd.net">Arjun Mehrotra</a>
     </div>
     </div>
-    
+    <div class="article12">
+      <h2 class="article">Ticonderoga recalled for “Dangerous Pencils”
+      </h2>
+      <p class="text">Image from <a href="https://constructiveplaythings.com/ticonderogar-beginner-pencils-w-eraser">ConstructivePlayThings</a></p>
+      <img src="ticeonderoga.webp" alt="ticeonderoga pencils from constructive play things">
+      <h4 class="text">
+        Students at Rock Middle school have reported several<br> cases of unsafe pencils during Mr. Bush’s core class.<br> Injuries related to products of Ticonderoga have included;<br> Digestion problems, Neurological damage, Cardiovascular<br> problems, and severe memory loss. Cases reported related<br> to these problems have all included a student using the<br> pencil to stab their skin. Ticonderoga scientists were sent to<br> the case, investigating the substance of the pencil that might<br> contain high levels of toxins. As of Friday, scientists have<br> found 43 types of toxins located in the pencil. Ticonderoga<br> pencils as of 4:38 PM have been removed from shelves<br> and schools. 
+      </h4>
+      <h4 class="text">
+        This article was written by
+        <a href="mailto:216027@students.srvusd.net">Konnor Ly</a>
+        </h4>
+    </div>
     <div class="article10">
       <h2 class="article">Chimpanzees Invade North Korea After<br> Man Said He "hates chimpanzees"
       </h2>
@@ -92,16 +104,16 @@
     
     <div class="article2">
       <h2 class="article">
-        CDC Eases Covid Mask Guidelines
+        Students at Rock Middle Schools Go On Strike
       </h2>
-      <p class="text">Image from ABC News</p>
-      <img src="cdcmask.jpeg" alt="person in mask" />
+      <p class="text">Image from <a href="https://www.latimes.com/politics/story/2020-06-11/young-people-joined-george-floyd-protests-but-will-they-vote">LA Times</a></p>
+      <img src="protestingpeople.jpeg" alt="people protesting from LA TIMES" />
       <h4 class="text">
-        The CDC has started to ease the covid mask guidelines after a steep drop<br> in cases and mitigation efforts nationwide. The Center for Disease Control<br> and Prevention started to assess each county by its covid severity level.<br> The three factors on assessing will be new Covid-19 cases per 100,000<br> residents in the past seven days, new Covid-19 cases per 100,000 residents<br> in the past seven days, and new Covid-19 related hospital admissions. There<br> were three risk categories based on Covid-19 cases: high, medium, and low.<br> The new guidelines focus on minimizing severe disease and containing any<br> new cases. The CDC now recommends school masking only in counties where<br> Covid-19 levels are high. They did this because most children are at a relatively<br> lower risk of severe disease and are mostly asymptomatic. CDC stated that<br> "We need to be able to relax our layered prevention measure when things<br> are looking up and, we need to be able to dial them again... should we have<br> a new variant or surge."
+        Students at rock middle school reportedly went on strike<br> after a bird flew into the cafeteria on Wednesday during<br> their lunch break. As you know students at Rock Middle<br> school are provided with a complimentary lunch on<br> wednesdays. According to the New York Times “This<br> naughty bird allegedly took a dump on 3 student’s<br> lunches and ruined the entire day.” The students went<br> hungry and are now going on strike in front of the<br> school. If you would like to support this cause you<br> can go up to their front office and ask them to sign<br> the petition to make lunch great again.
       </h4>
       <h4 class="text">
         This article was written by
-        <a style="margin: 0px;"href="mailto:220603@students.srvusd.net">Arjun Mehrotra</a>
+        <a style="margin: 0px;"href="mailto:219915@students.srvusd.net">Nathan Chow</a>
       </h4>
     </div>
     <!--<div class="article3">
